5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1764_674.log
== TEST (2019-05-21 16:27:40) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = arrray ([1,4,7,8])
print(type(notas))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:28:10) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = arrray([1,4,7,8])
print(type(notas))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:29:45) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = arrray([1,4,7,8])**2
print((notas))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:33:06) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = array([6.2, 2.3, 9.4, 5.1,8.9, 9.8, 10.0, 7.0, 6.3, 4.4])
print(notas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:33:53) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = array([6.2, 2.3, 9.4, 5.1,8.9, 9.8, 10.0,7.0, 6.3, 4.4])
print(notas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:34:09) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = array([6.2, 2.3, 9.4, 5.1,8.9, 9.8, 10.0,7.0, 6.3, 4.4])
print(notas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:36:07) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = array([6.2, 2.3, 9.4, 5.1,8.9, 9.8, 10.0,7.0, 6.3, 4.4])
print(notas[2:4])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:37:01) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = array([6.2, 2.3, 9.4, 5.1,8.9, 9.8, 10.0,7.0, 6.3, 4.4])
print(notas[-1:-4])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:37:36) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = array([6.2, 2.3, 9.4, 5.1,8.9, 9.8, 10.0,7.0, 6.3, 4.4])
print(notas[-4:-1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:46:08) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = array([6.2, 2.3, 9.4, 5.1])
print(size(notas)
		
		
-- ERROR:
File "XXXX", line 9
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:46:24) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = array([6.2, 2.3, 9.4, 5.1])
print(size(notas))
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:48:46) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = array([6.2, 2.3, 9.4, 5.1])
print(size(notas))
print(notas[0])
print(size(notas))
print(size(notas))
print(size(notas))

		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:50:46) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = array([6.2, 2.3, 9.4, 5.1])
print(size(notas))
print(notas[0])
print(notas[-1])
print(size(notas))
print(size(notas))
print(size(notas))

		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:51:49) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = array([6.2, 2.3, 9.4, 5.1])
print(size(notas))
print(notas[0])
print(notas[-1])
print(max(notas)
print(size(notas))
print(size(notas))
print(size(notas))

		
		
-- ERROR:
File "XXXX", line 10
    print(size(notas))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:52:01) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = array([6.2, 2.3, 9.4, 5.1])
print(size(notas))
print(notas[0])
print(notas[-1])
print(max(notas))
print(size(notas))
print(size(notas))
print(size(notas))

		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:52:32) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = array([6.2, 2.3, 9.4, 5.1])
print(size(notas))
print(notas[0])
print(notas[-1])
print(max(notas))
print(min(notas))
print(size(notas))
print(size(notas))
print(size(notas))

		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:53:46) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = array([6.2, 2.3, 9.4, 5.1])
print(size(notas))
print(notas[0])
print(notas[-1])
print(max(notas))
print(min(notas))
print(sum(notas))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:55:09) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = array([6.2, 2.3, 9.4, 5.1])
print(size(notas))
print(notas[0])
print(notas[-1])
print(max(notas))
print(min(notas))
print(sum(notas))
print(round(sum(notas)/size(notas),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:55:13) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = array([6.2, 2.3, 9.4, 5.1])
print(size(notas))
print(notas[0])
print(notas[-1])
print(max(notas))
print(min(notas))
print(sum(notas))
print(round(sum(notas)/size(notas),2))
-- EXECUTION TIME:
0.397976
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
4
6.2
5.1
9.4
2.3
23.0
5.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:55:55) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = array([6.2, 2.3, 9.4, 5.1])
print(size(notas))
print(notas[0])
print(notas[-1])
print(max(notas))
print(min(notas))
print(sum(notas))
print(round(sum(notas)/size(notas),2))
-- EXECUTION TIME:
0.494751
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
4
6.2
5.1
9.4
2.3
23.0
5.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:58:04) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = array([6,6,6,6])
print(size(notas))
print(notas[0])
print(notas[-1])
print(max(notas))
print(min(notas))
print(sum(notas))
print(round(sum(notas)/size(notas),2))
-- EXECUTION TIME:
0.42056
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
4
6
6
6
6
24
6.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:58:11) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = array([6,6,6,6])
print(size(notas))
print(notas[0])
print(notas[-1])
print(max(notas))
print(min(notas))
print(sum(notas))
print(round(sum(notas)/size(notas),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:59:47) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = array([6,6,6,0])
print(size(notas))
print(notas[0])
print(notas[-1])
print(max(notas))
print(min(notas))
print(sum(notas))
print(round(sum(notas)/size(notas),2))
-- EXECUTION TIME:
0.537265
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
4
6
0
6
0
18
4.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:01:36) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = array([20,10,50,40,30])
print(size(notas))
print(notas[0])
print(notas[-1])
print(max(notas))
print(min(notas))
print(sum(notas))
print(round(sum(notas)/size(notas),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:05:07) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = array([20,10,50,40,30])
print(size(notas))
print(notas[0])
print(notas[-1])
print(max(notas))
print(min(notas))
print(sum(notas))
print(round((sum(notas)/size(notas),2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:05:35) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = array([10,50,40,30])
print(size(notas))
print(notas[0])
print(notas[-1])
print(max(notas))
print(min(notas))
print(sum(notas))
print(round(sum(notas)/size(notas),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:05:50) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = array([10,50,40,30])
print(size(notas))
print(notas[0])
print(notas[-1])
print(max(notas))
print(min(notas))
print(sum(notas))
print(round(sum(notas)/size(notas),2))
-- EXECUTION TIME:
0.519194
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
4
10
30
50
10
130
32.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:06:03) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = array([10,50,40,30])
print(size(notas))
print(notas[0])
print(notas[-1])
print(max(notas))
print(min(notas))
print(sum(notas))
print(round(sum(notas)/size(notas),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:06:35) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = array([10,50,40,30])
print(size(notas))
print(notas[0])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:07:05) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = array([10,50,40,30])
print(size(notas))
print(notas[0])
print(notas[-1])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:09:16) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = array([10,50,40,30])
print(size(notas))
print(notas[0])
print(notas[-1])
print(max(notas))
print(min(notas))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:10:01) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = array([10,50,40,30])
print(sum(notas))
print(round(sum(notas)/size(notas),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:10:52) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = array([10,50,40,30])
print(size(notas))
print(notas[0])
print(notas[-1])
print(max(notas))
print(min(notas))

print(sum(notas))
print(round(sum(notas)/size(notas),2))
-- EXECUTION TIME:
0.54557
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
4
10
30
50
10
130
32.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:11:39) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = array([10,50,40,30])
print(size(notas))
print(notas[0])
print(notas[-1])
print(max(notas))
print(min(notas))
print(sum(notas))
print(round(sum(notas)/size(notas),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:12:03) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas = array([20,10,50,40,30])
print(size(notas))
print(notas[0])
print(notas[-1])
print(max(notas))
print(min(notas))
print(sum(notas))
print(round(sum(notas)/size(notas),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:14:53) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas= array(eval(input('digite um numeoro inteiro: ')))
print(size(notas))
print(notas[0])
print(notas[-1])
print(max(notas))
print(min(notas))
print(sum(notas))
print(round(sum(notas)/size(notas),2))
-- EXECUTION TIME:
0.422407
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:26:15) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas= array(eval(input('digite um numeoro inteiro: ')))
print(size(notas)) #imprime o tamanho do vetor 
print(notas[0]) #imprime o primeiro elemento do vetor
print(notas[-1])  #imprime o ultimo elemento do vetor
print(max(notas)) #imprime o maior elemento do vetor
print(min(notas)) # imprime o menor elemento do vetor
print(sum(notas)) # imprime a soma de todos os elementos do vetor
print(round(sum(notas)/size(notas),2)) #imprime a media dos elementos do vetor
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:26:39) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas= array(eval(input('digite um numeoro inteiro: ')))
print(size(notas)) #imprime o tamanho do vetor 
print(notas[0]) #imprime o primeiro elemento do vetor
print(notas[-1])  #imprime o ultimo elemento do vetor
print(max(notas)) #imprime o maior elemento do vetor
print(min(notas)) # imprime o menor elemento do vetor
print(sum(notas)) # imprime a soma de todos os elementos do vetor
print(round(sum(notas)/size(notas),2)) #imprime a media dos elementos do vetor
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:26:47) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas= array(eval(input('digite um numeoro inteiro: ')))
print(size(notas)) #imprime o tamanho do vetor 
print(notas[0]) #imprime o primeiro elemento do vetor
print(notas[-1])  #imprime o ultimo elemento do vetor
print(max(notas)) #imprime o maior elemento do vetor
print(min(notas)) # imprime o menor elemento do vetor
print(sum(notas)) # imprime a soma de todos os elementos do vetor
print(round(sum(notas)/size(notas),2)) #imprime a media dos elementos do vetor
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 22:03:51) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas= array(eval(input('digite um numeoro inteiro: ')))
print(size(notas)) #imprime o tamanho do vetor 
print(notas[0]) #imprime o primeiro elemento do vetor
print(notas[-1])  #imprime o ultimo elemento do vetor
print(max(notas)) #imprime o maior elemento do vetor
print(min(notas)) # imprime o menor elemento do vetor
print(sum(notas)) # imprime a soma de todos os elementos do vetor
print(round(sum(notas)/size(notas),2)) #imprime a media dos elementos do vetor
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 22:04:46) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas= array(eval(input('digite um numeoro inteiro: ')))
print(size(notas)) #imprime o tamanho do vetor 
print(notas[0]) #imprime o primeiro elemento do vetor
print(notas[-1])  #imprime o ultimo elemento do vetor
print(max(notas)) #imprime o maior elemento do vetor
print(min(notas)) # imprime o menor elemento do vetor
print(sum(notas)) # imprime a soma de todos os elementos do vetor
print(round(sum(notas)/size(notas),2)) #imprime a media dos elementos do vetor
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:54:21) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas= array(eval(input('digite um numeoro inteiro: ')))
print(size(notas)) #imprime o tamanho do vetor 
print(notas[0]) #imprime o primeiro elemento do vetor
print(notas[-1])  #imprime o ultimo elemento do vetor
print(max(notas)) #imprime o maior elemento do vetor
print(min(notas)) # imprime o menor elemento do vetor
print(sum(notas)) # imprime a soma de todos os elementos do vetor
print(round(sum(notas)/len(notas),2)) #imprime a media dos elementos do vetor
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:54:44) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas= array(eval(input('digite um numeoro inteiro: ')))
print(size(notas)) #imprime o tamanho do vetor 
print(notas[0]) #imprime o primeiro elemento do vetor
print(notas[-1])  #imprime o ultimo elemento do vetor
print(max(notas)) #imprime o maior elemento do vetor
print(min(notas)) # imprime o menor elemento do vetor
print(sum(notas)) # imprime a soma de todos os elementos do vetor
print(round(sum(notas)/len(notas),2)) #imprime a media dos elementos do vetor
-- EXECUTION TIME:
0.35369
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:05:01) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
notas= array(eval(input('digite um numeoro inteiro: ')))
compras=0
i=0
while(i > len(notas)):
	if(notas[i] > 80):
		notas[i] = notas[i]- 5
		compras= compras + notass[i]
	else:
		notas[i]=notas[i]
		compras=compras+ notas[i]
i=i+1
print(round(compras,2))
		


print(size(notas)) #imprime o tamanho do vetor 
print(notas[0]) #imprime o primeiro elemento do vetor
print(notas[-1])  #imprime o ultimo elemento do vetor
print(max(notas)) #imprime o maior elemento do vetor
print(min(notas)) # imprime o menor elemento do vetor
print(sum(notas)) # imprime a soma de todos os elementos do vetor
print(round(sum(notas)/len(notas),2)) #imprime a media dos elementos do vetor
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
